generating prelim results for discussion

--- a/experiments/exp11_debating_llava_advanced_web_access.ipynb
+++ b/experiments/exp11_debating_llava_advanced_web_access.ipynb
@@ -825,7 +825,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b51c2afde75407bb92c1b4151cde908",
+       "model_id": "5d3425dd9a3a4e6c9f947c13762535c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -846,7 +846,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e7b0c1138ea491097265a3ce277c42e",
+       "model_id": "be75771860e841688f773a293ce938fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -924,6 +924,7 @@
     "\n",
     "data_sample = 2\n",
     "image, caption, img_path, annotation = get_data(data_sample)\n",
+    "\n",
     "display(image)\n",
     "show_data(data_sample)\n",
     "image_size = image.size\n",
@@ -938,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,11 +1034,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INPUT MESSAGE:  <|im_start|>user\n",
+      ": Given the text: BBC3 won the RTS best single drama award for Murdered By My Boyfriend. Does this text belong to the same context as the image or is the image being used out of context to spread misinformation?\n",
+      "                    The image is real. It has not been digitally altered. \n",
+      "                    Carefully examine the image for any watermarks, text and other details which could tell you about the location, time or other important information to better inform your answer.\n",
+      "                    If you are even a little unsure, state this as UNSURE.\n",
+      "                    Explain your answer in detail.\n",
+      "                    At the end give a definite YES, NO or UNSURE answer to this question: MISINFORMATION?\n",
+      "========================== Agent - 1 =====================\n",
+      "The image shows two individuals, a man and a woman, in a close-up shot. The woman appears to be speaking or reacting to something the man is saying or doing. The man is looking at the woman with a serious expression. The background is nondescript, with a neutral color palette that does not provide any specific context or location.\n",
+      "\n",
+      "There are no visible watermarks, logos, or text in the image that would indicate the specific context or origin of the photo. The image is clear and well-lit, suggesting it might be from a film, television show, or a staged photograph.\n",
+      "\n",
+      "Given the text provided, \"BBC3 won the RTS best single drama award for Murdered By My Boyfriend,\" it is possible that the image is related to the content of the award-winning drama. However, without additional context or visual cues, it is not possible to definitively confirm this.\n",
+      "\n",
+      "In terms of misinformation, the image itself does not contain any text or elements that would suggest it is being used out of context to spread misinformation. The image is real and has not been digitally altered, as stated. However, without more information, it is not possible to determine if the image is being used in a misleading way or if it is accurately representing the content of the drama.\n",
+      "\n",
+      "Therefore, based on the information available, I am UNSURE if the image is being used out of context to spread misinformation.\n",
+      "Searching the web now!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ccc2a5780c3644a2ac534235ed2907ec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Both `max_new_tokens` (=1000) and `max_length`(=3000) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 10 search results.\n",
+      "************ search results:  SUMMARY:\n",
+      "                 and best comedy and comedy entertainment programme for Peep Show.The RTS awards are considered a key indicator of quality in British television and are seen as a measure of the success of individual programmes and the networks that commission them.The awards were presented at a ceremony in London hosted by Graham Norton. Related: BBC3 to be axed as part of cost-cutting measures Continue reading...\n",
+      "\n",
+      "ARTICLE-4:\n",
+      "Thank you for providing additional context. Based on the summary of the articles you found, it seems that the image is indeed related to the context provided in the text. The articles mention the RTS awards, which aligns with the text stating that BBC3 won an award. The articles also mention the award for \"Murdered By My Boyfriend,\" which is consistent with the text provided.\n",
+      "\n",
+      "Given this information, it appears that the image and text belong to the same context, and the image is not being used out of context to spread misinformation. Therefore, I am able to provide a definitive answer:\n",
+      "\n",
+      "MISINFORMATION? NO\n",
+      "INPUT MESSAGE:  <|im_start|>user\n",
+      ": Given the text: BBC3 won the RTS best single drama award for Murdered By My Boyfriend. Does this text belong to the same context as the image or is the image being used out of context to spread misinformation?\n",
+      "                    The image is real. It has not been digitally altered. \n",
+      "                    Carefully examine the image for any watermarks, text and other details which could tell you about the location, time or other important information to better inform your answer.\n",
+      "                    If you are even a little unsure, state this as UNSURE.\n",
+      "                    Explain your answer in detail.\n",
+      "                    At the end give a definite YES, NO or UNSURE answer to this question: MISINFORMATION?\n",
+      "========================== Agent - 2 =====================\n",
+      "image is none!\n",
+      "The image shows two individuals in a close-up shot, with one person looking at the other with a concerned or questioning expression. There are no visible watermarks, text, or other details that provide specific information about the location, time, or context of the image.\n",
+      "\n",
+      "Given the text provided, it is possible that the image is related to the drama \"Murdered By My Boyfriend,\" which won an award. However, without additional context or visual cues, it is not possible to confirm this with certainty. The image could be from a different scene or unrelated to the mentioned drama.\n",
+      "\n",
+      "Therefore, based on the information available, I am UNSURE whether the image is being used out of context to spread misinformation. The image itself does not provide enough information to confirm the connection to the drama mentioned in the text.\n",
+      "Thank you for providing additional context. Based on the summary of the articles you found, it appears that the image is indeed related to the RTS awards, which is consistent with the text provided. The articles mention that BBC3 won awards for \"Murdered By My Boyfriend\" and \"Peep Show,\" which aligns with the text about BBC3 winning the RTS best single drama award for \"Murdered By My Boyfriend.\"\n",
+      "\n",
+      "Therefore, I can now confidently say that the image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION: NO\n",
+      "========== Debate Round: 1 ==========\n",
+      "========================== Agent - 1 =====================\n",
+      "I agree with your assessment. Based on the information you provided, it is clear that the image is related to the context of the RTS awards and the BBC3 winning an award for \"Murdered By My Boyfriend.\" The articles you found confirm this, and there is no indication that the image is being used out of context to spread misinformation.\n",
+      "\n",
+      "Therefore, I am able to provide a definitive answer:\n",
+      "\n",
+      "MISINFORMATION? NO\n",
+      "INPUT MESSAGE:   <|im_start|>user\n",
+      ": This is what I think: Thank you for providing additional context. Based on the summary of the articles you found, it seems that the image is indeed related to the context provided in the text. The articles mention the RTS awards, which aligns with the text stating that BBC3 won an award. The articles also mention the award for \"Murdered By My Boyfriend,\" which is consistent with the text provided.\n",
+      "\n",
+      "Given this information, it appears that the image and text belong to the same context, and the image is not being used out of context to spread misinformation. Therefore, I am able to provide a definitive answer:\n",
+      "\n",
+      "MISINFORMATION? NO<|im_end|>. Do you agree with me? If you think I am wrong then convince me.\n",
+      "            Clearly state your reasoning and tell me if I am missing out on some important information or am making some logical error.\n",
+      "            Do not describe the image. \n",
+      "            If you are even a little unsure of your answer or need more context, state it as UNSURE.\n",
+      "            At the end give a definite YES, NO or UNSURE answer to this question: MISINFORMATION?\n",
+      "            \n",
+      "========================== Agent - 2 =====================\n",
+      "I agree with your assessment. The additional context provided by the articles you found confirms that the image is related to the RTS awards and the award for \"Murdered By My Boyfriend,\" which aligns with the text provided. The image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION? NO\n",
+      "========== Debate Round: 2 ==========\n",
+      "INPUT MESSAGE:   <|im_start|>user\n",
+      ": I see what you mean and this is what I think: I agree with your assessment. The additional context provided by the articles you found confirms that the image is related to the RTS awards and the award for \"Murdered By My Boyfriend,\" which aligns with the text provided. The image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION? NO<|im_end|>. Do you agree with me?\n",
+      "                If not then point out the inconsistencies in my argument (e.g. location, time or person related logical confusion) and explain why you are correct. \n",
+      "                If you disagree with me then clearly state why and what information I am overlooking.\n",
+      "                You can also ask me rebutal questions to find loopholes in my reasoning. \n",
+      "                Don't give up your original opinion without clear reasons, DO NOT simply agree with me without proper reasoning.\n",
+      "                If you need additional information to strengthen your argument you can request an internet search by stating \"INFO REQUIRED\".\n",
+      "                At the end give a definite YES, NO or UNSURE answer to this question: MISINFORMATION?\n",
+      "            \n",
+      "========================== Agent - 1 =====================\n",
+      "I agree with your assessment. The additional context provided by the articles you found confirms that the image is related to the RTS awards and the award for \"Murdered By My Boyfriend,\" which aligns with the text provided. The image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION? NO\n",
+      "INPUT MESSAGE:   <|im_start|>user\n",
+      ": I see what you mean and this is what I think: I agree with your assessment. The additional context provided by the articles you found confirms that the image is related to the RTS awards and the award for \"Murdered By My Boyfriend,\" which aligns with the text provided. The image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION? NO<|im_end|>. Do you agree with me?\n",
+      "                If not then point out the inconsistencies in my argument (e.g. location, time or person related logical confusion) and explain why you are correct. \n",
+      "                If you disagree with me then clearly state why and what information I am overlooking.\n",
+      "                You can also ask me rebutal questions to find loopholes in my reasoning. \n",
+      "                Don't give up your original opinion without clear reasons, DO NOT simply agree with me without proper reasoning.\n",
+      "                If you need additional information to strengthen your argument you can request an internet search by stating \"INFO REQUIRED\".\n",
+      "                At the end give a definite YES, NO or UNSURE answer to this question: MISINFORMATION?\n",
+      "            \n",
+      "========================== Agent - 2 =====================\n",
+      "I agree with your assessment. The additional context provided by the articles you found confirms that the image is related to the RTS awards and the award for \"Murdered By My Boyfriend,\" which aligns with the text provided. The image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION? NO\n",
+      "========== Debate Round: 3 ==========\n",
+      "INPUT MESSAGE:   <|im_start|>user\n",
+      ": I see what you mean and this is what I think: I agree with your assessment. The additional context provided by the articles you found confirms that the image is related to the RTS awards and the award for \"Murdered By My Boyfriend,\" which aligns with the text provided. The image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION? NO<|im_end|>. Do you agree with me?\n",
+      "                If not then point out the inconsistencies in my argument (e.g. location, time or person related logical confusion) and explain why you are correct. \n",
+      "                If you disagree with me then clearly state why and what information I am overlooking.\n",
+      "                You can also ask me rebutal questions to find loopholes in my reasoning. \n",
+      "                Don't give up your original opinion without clear reasons, DO NOT simply agree with me without proper reasoning.\n",
+      "                If you need additional information to strengthen your argument you can request an internet search by stating \"INFO REQUIRED\".\n",
+      "                At the end give a definite YES, NO or UNSURE answer to this question: MISINFORMATION?\n",
+      "            \n",
+      "========================== Agent - 1 =====================\n",
+      "I agree with your assessment. The additional context provided by the articles you found confirms that the image is related to the RTS awards and the award for \"Murdered By My Boyfriend,\" which aligns with the text provided. The image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION? NO\n",
+      "INPUT MESSAGE:   <|im_start|>user\n",
+      ": I see what you mean and this is what I think: I agree with your assessment. The additional context provided by the articles you found confirms that the image is related to the RTS awards and the award for \"Murdered By My Boyfriend,\" which aligns with the text provided. The image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION? NO<|im_end|>. Do you agree with me?\n",
+      "                If not then point out the inconsistencies in my argument (e.g. location, time or person related logical confusion) and explain why you are correct. \n",
+      "                If you disagree with me then clearly state why and what information I am overlooking.\n",
+      "                You can also ask me rebutal questions to find loopholes in my reasoning. \n",
+      "                Don't give up your original opinion without clear reasons, DO NOT simply agree with me without proper reasoning.\n",
+      "                If you need additional information to strengthen your argument you can request an internet search by stating \"INFO REQUIRED\".\n",
+      "                At the end give a definite YES, NO or UNSURE answer to this question: MISINFORMATION?\n",
+      "            \n",
+      "========================== Agent - 2 =====================\n",
+      "I agree with your assessment. The additional context provided by the articles you found confirms that the image is related to the RTS awards and the award for \"Murdered By My Boyfriend,\" which aligns with the text provided. The image and text belong to the same context, and the image is not being used out of context to spread misinformation.\n",
+      "\n",
+      "MISINFORMATION? NO\n"
+     ]
+    }
+   ],
    "source": [
-    "#print(f\"{roles[1]}: \", end=\"\")\n",
     "num_rounds = 3\n",
     "temp=\"\"\n",
     "model_responses = {}\n",
@@ -1076,7 +1241,7 @@
     "        conv[i].append_message(conv[i].roles[1], None)\n",
     "        outputs = generate_output(i, conv, models)\n",
     "        conv[i].messages[-1][-1] = outputs\n",
-    "        print(\"==========\", outputs)\n",
+    "        #print(\"==========\", outputs)\n",
     "        if \"UNSURE\" in outputs:\n",
     "            if not search_done:\n",
     "                matching_urls = get_matching_urls(data_sample)\n",
@@ -1105,6 +1270,13 @@
     "                model_responses[i][\"falsified\"] = \"False\"\n",
     "                model_responses[i][\"output\"] = outputs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1123,7 +1295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
