result analysis for results so far

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -12,43 +12,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../scripts/results1_no_web_access.json\", \"r\") as f:\n",
+    "with open(\"../scripts/results3_no_web_access_less_unsure.json\", \"r\") as f:\n",
     "    data = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 714504,\n",
-       " 'image_id': 1670772,\n",
-       " 'similarity_score': 0.5850415825843811,\n",
-       " 'source_dataset': 2,\n",
-       " 'falsified': 'False',\n",
-       " 'output': {'model_0': \"I agree with your assessment that the image is related to the protest described in the text. The attire of the individuals, the banner they are holding, and the location all align with the information provided. The watermark or logo in the bottom right corner could potentially be a sign of the photographer or the source of the image, but without more context, it is not possible to determine the exact source or the photographer's intent.\\n\\nGiven the visual evidence and the context provided, it is reasonable to conclude that the image is not being used out of context to spread misinformation. Therefore, the image is not being used out of context to spread misinformation.\\n\\nMISINFORMATION? NO<|im_end|>\",\n",
-       "  'model_1': \"I agree with your assessment that the image is related to the protest described in the text. The attire of the individuals, the banner they are holding, and the location all align with the information provided. The watermark or logo in the bottom right corner could potentially be a sign of the photographer or the source of the image, but without more context, it is not possible to determine the exact source or the photographer's intent.\\n\\nGiven the visual evidence and the context provided, it is reasonable to conclude that the image is not being used out of context to spread misinformation. Therefore, the image is not being used out of context to spread misinformation.\\n\\nMISINFORMATION? NO<|im_end|>\"}}"
+       "646"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[1]"
+    "len(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,19 +67,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5000\n"
+      "Accuracy: 0.5573\n"
      ]
     }
    ],
    "source": [
     "print(\"Accuracy: {:.4f}\".format(num_correct/len(data)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6058\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy: {:.4f}\".format(num_correct/len(data)))"
    ]
   },
   {
