add precision and recall to analysis

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -12,32 +12,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_results(filename):\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "    print(\"Number of data points: \", len(data))\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_test_data_annotations():\n",
+    "    visual_news_data = json.load(open(\"../../datasets/visualnews/origin/data.json\"))\n",
+    "    visual_news_data_mapping = {ann[\"id\"]: ann for ann in visual_news_data}\n",
+    "\n",
+    "    test_data = json.load(open(\"../../news_clippings/news_clippings/data/merged_balanced/test.json\"))\n",
+    "    annotations = test_data[\"annotations\"]\n",
+    "    return annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_accuracy(data, annotations):\n",
+    "    num_correct = 0\n",
+    "    for i in range(len(data)):\n",
+    "        if bool(data[i]['falsified']) == annotations[i]['falsified']:\n",
+    "            num_correct += 1\n",
+    "    return num_correct/len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def true_positives(data, annotations):\n",
+    "    num_tp = 0\n",
+    "    for i in range(len(data)):\n",
+    "        if annotations[i]['falsified'] == True and bool(data[i]['falsified']) == True:\n",
+    "            num_tp += 1\n",
+    "    return num_tp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../scripts/results3_no_web_access_less_unsure.json\", \"r\") as f:\n",
-    "    data = json.load(f)"
+    "def false_positives(data, annotations):\n",
+    "    num_fp = 0\n",
+    "    for i in range(len(data)):\n",
+    "        if annotations[i]['falsified'] == False and bool(data[i]['falsified']) == True:\n",
+    "            num_fp += 1\n",
+    "    return num_fp"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "646"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(data)"
+    "def false_negatives(data, annotations):\n",
+    "    num_fn = 0\n",
+    "    for i in range(len(data)):\n",
+    "        if annotations[i]['falsified'] == True and bool(data[i]['falsified']) == False:\n",
+    "            num_fn += 1\n",
+    "    return num_fn"
    ]
   },
   {
@@ -46,65 +100,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visual_news_data = json.load(open(\"../../datasets/visualnews/origin/data.json\"))\n",
-    "visual_news_data_mapping = {ann[\"id\"]: ann for ann in visual_news_data}\n",
-    "\n",
-    "test_data = json.load(open(\"../../news_clippings/news_clippings/data/merged_balanced/test.json\"))\n",
-    "annotations = test_data[\"annotations\"]"
+    "def get_precision_and_recall(data, annotations):\n",
+    "    tp,fp,fn = true_positives(data, annotations), false_positives(data, annotations), false_negatives(data, annotations)\n",
+    "    precision = tp/(tp+fp)\n",
+    "    recall = tp/(tp+fn)\n",
+    "    return precision, recall"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### no web access"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points:  993\n",
+      "Accuracy: 0.5700\n",
+      "Precision: 0.5438\n",
+      "Recall: 0.8629\n"
+     ]
+    }
+   ],
    "source": [
-    "num_correct = 0\n",
-    "for i in range(len(data)):\n",
-    "    if bool(data[i]['falsified']) == annotations[i]['falsified']:\n",
-    "        num_correct += 1"
+    "no_web_file = \"../scripts/results3_no_web_access_less_unsure.json\"\n",
+    "result_data = get_results(no_web_file)\n",
+    "test_data_annotations = get_test_data_annotations()\n",
+    "precision, recall = get_precision_and_recall(result_data, test_data_annotations)\n",
+    "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data, test_data_annotations)))\n",
+    "print(\"Precision: {:.4f}\".format(precision))\n",
+    "print(\"Recall: {:.4f}\".format(recall))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### with web access"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5573\n"
+      "Number of data points:  137\n",
+      "Accuracy: 0.6058\n",
+      "Precision: 0.5833\n",
+      "Recall: 0.7206\n"
      ]
     }
    ],
    "source": [
-    "print(\"Accuracy: {:.4f}\".format(num_correct/len(data)))\n"
+    "web_access_file = \"../scripts/results_web_access.json\"\n",
+    "result_data2 = get_results(web_access_file)\n",
+    "precision, recall = get_precision_and_recall(result_data2, test_data_annotations)\n",
+    "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data2, test_data_annotations)))\n",
+    "print(\"Precision: {:.4f}\".format(precision))\n",
+    "print(\"Recall: {:.4f}\".format(recall))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.6058\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Accuracy: {:.4f}\".format(num_correct/len(data)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
