additional result and failure case analysis

--- a/experiments/exp10_result_analysis.ipynb
+++ b/experiments/exp10_result_analysis.ipynb
@@ -2,30 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
     "import json\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_results(filename):\n",
     "    with open(filename, \"r\") as f:\n",
     "        data = json.load(f)\n",
-    "    print(\"Number of data points: \", len(data))\n",
+    "    #print(\"Number of data points: \", len(data))\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,21 +43,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_unsures(data):\n",
+    "    \"\"\"\n",
+    "    In instances where one of the models does not have any output, consider the output of the other model to be the truth\n",
+    "    \"\"\"\n",
+    "    num_unsures = 0\n",
+    "    for i in range(len(data)):\n",
+    "        if data[i]['falsified'] == \"Unsure\":\n",
+    "            num_unsures += 1\n",
+    "            if data[i]['output']['model_0'] == \"\" and data[i]['output']['model_1'] != \"\":\n",
+    "                if \"YES\" in data[i]['output']['model_1']:\n",
+    "                    data[i]['falsified'] = True\n",
+    "                elif \"NO\" in data[i]['output']['model_1']:\n",
+    "                    data[i]['falsified'] = False\n",
+    "            elif data[i]['output']['model_0'] != \"\" and data[i]['output']['model_1'] == \"\":\n",
+    "                if \"YES\" in data[i]['output']['model_0']:\n",
+    "                    data[i]['falsified'] = True\n",
+    "                elif \"NO\" in data[i]['output']['model_0']:\n",
+    "                    data[i]['falsified'] = False\n",
+    "    print(\"Num unsures: \", num_unsures)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_disagreements(data):\n",
+    "    \"\"\"\n",
+    "    Function to check when models actually disagree and when they are just unsure\n",
+    "    \"\"\"\n",
+    "    disagreements = 0\n",
+    "    for i in range(len(data)):\n",
+    "        m0 = data[i]['output']['model_0']\n",
+    "        m1 = data[i]['output']['model_1']\n",
+    "        if data[i]['falsified'] == \"Unsure\":\n",
+    "            #check if models disagree\n",
+    "            if \"YES\" in m0 and (\"NO\" in m1 or \"UNSURE\" in m1):\n",
+    "                disagreements += 1\n",
+    "            elif \"NO\" in m0 and (\"YES\" in m1 or \"UNSURE\" in m1):\n",
+    "                disagreements += 1\n",
+    "            elif \"UNSURE\" in m0 and (\"YES\" in m1 or \"NO\" in m1):\n",
+    "                disagreements += 1\n",
+    "    print(\"Num disagreements: \", disagreements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_accuracy(data, annotations):\n",
     "    num_correct = 0\n",
+    "    data = fix_unsures(data)\n",
+    "    incorrect_idx = []\n",
     "    for i in range(len(data)):\n",
     "        if bool(data[i]['falsified']) == annotations[i]['falsified']:\n",
     "            num_correct += 1\n",
-    "    return num_correct/len(data)"
+    "        else:\n",
+    "            incorrect_idx.append(i)\n",
+    "    return num_correct/len(data), incorrect_idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,24 +176,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of data points:  1410\n",
-      "1410\n",
-      "Accuracy: 0.5801\n",
-      "Precision: 0.5507\n",
-      "Recall: 0.8709\n"
+      "Num disagreements:  8\n",
+      "Num unsures:  675\n",
+      "Accuracy: 0.5720\n",
+      "Precision: 0.5448\n",
+      "Recall: 0.8640\n"
      ]
     }
    ],
    "source": [
     "no_web_file = \"../scripts/results3_no_web_access_less_unsure.json\"\n",
     "result_data = get_results(no_web_file)\n",
+    "result_data = result_data[:1000]\n",
+    "num_disagreements(result_data)\n",
     "test_data_annotations = get_test_data_annotations()\n",
     "precision, recall = get_precision_and_recall(result_data, test_data_annotations)\n",
     "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data, test_data_annotations)))\n",
@@ -150,28 +212,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of data points:  137\n",
-      "Accuracy: 0.6058\n",
-      "Precision: 0.5833\n",
-      "Recall: 0.7206\n"
+      "Num disagreements:  10\n",
+      "Num unsures:  202\n",
+      "Accuracy: 0.5983\n",
+      "Precision: 0.5826\n",
+      "Recall: 0.6933\n"
      ]
     }
    ],
    "source": [
-    "web_access_file = \"../scripts/results_web_access.json\"\n",
+    "web_access_file = \"../results/final_result.json\"\n",
     "result_data2 = get_results(web_access_file)\n",
+    "num_disagreements(result_data2)\n",
     "precision, recall = get_precision_and_recall(result_data2, test_data_annotations)\n",
     "print(\"Accuracy: {:.4f}\".format(get_accuracy(result_data2, test_data_annotations)))\n",
     "print(\"Precision: {:.4f}\".format(precision))\n",
     "print(\"Recall: {:.4f}\".format(recall))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysing where model fails (what kinds of examples the model fails on)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "from utils.data import get_data, show_data\n",
+    "\n",
+    "def failed_samples(incorrect_idx, res_data):\n",
+    "    for i in incorrect_idx:\n",
+    "        img, caption, _, _ = get_data(i)\n",
+    "        display(img)\n",
+    "        show_data(i)\n",
+    "        print(\"Model_prediction: \", res_data[i]['falsified'])\n",
+    "        print(\"Model arguments: \", res_data[i]['output'])\n",
+    "        cont = input()\n",
+    "        if \"exit\" == cont:\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, incorrect_idx = get_accuracy(result_data2, test_data_annotations)\n",
+    "failed_samples(incorrect_idx, result_data2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -190,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
